Bug: Ajustar colores y contrastres

--- a/cd2024bfs5g1-frontend/src/main/ngx/src/assets/css/workwander.scss
+++ b/cd2024bfs5g1-frontend/src/main/ngx/src/assets/css/workwander.scss
@@ -357,10 +357,6 @@ nav.ng-star-inserted:nth-last-child(2) {
       background-image: $linear-gradientRL;
     }
 
-    .mat-drawer.o-app-sidenav-sidenav .mat-drawer-inner-container nav a {
-      border-radius: $borderRadius;
-    }
-
     .o-app-sidenav-menu-item:not([disabled="true"]) {
       border-radius: $borderRadiusNav;
       transition: all 0.2s;
@@ -638,7 +634,7 @@ o-column {
   }
 }
 .form-new-event {
-  background-color: transparent;
+  background-color: $blanco;
   border: solid 1px $verdeBoton;
   border-radius: $borderRadius;
 
@@ -1622,6 +1618,14 @@ td.cdk-column-deleteCoworking.mat-column-deleteCoworking {
     font-size: 16px !important;
     height: 50px !important;
     border-bottom: 3px solid $blanco !important;
+  }
+
+//Unificacion color en modal de Mis coworkings en coworking-edit
+  .mat-mdc-dialog-container {
+    --mdc-dialog-container-color: #e9e9e9 !important;
+    --mdc-dialog-with-divider-divider-color: rgba(0, 0, 0, 0.12);
+    --mdc-dialog-subhead-color: rgba(0, 0, 0, 0.87);
+    --mdc-dialog-supporting-text-color: rgba(0, 0, 0, 0.6);
   }
 }
 
